# Structurale

./: .Rprofile  .gitignore  README.md  pyproject.toml
gh-pages/: seance1.html  seance2.html
notebooks/: Séance 1.ipynb  Séance 2.ipynb  TP1.Rmd  Untitled.ipynb
piestruct/utils/: customfuncs.py  customobjs.py
